--- a/usuarios/src/main/resources/static/usuarios.html
+++ b/usuarios/src/main/resources/static/usuarios.html
@@ -376,35 +376,28 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <table class="table table-bordered" id="usuarios" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Name</th>
-                                            <th>Position</th>
-                                            <th>Office</th>
-                                            <th>Age</th>
-                                            <th>Start date</th>
-                                            <th>Salary</th>
+                                            <th>ID</th>
+                                            <th>Nombre Completo</th>
+                                            <th>Email</th>
+                                            <th>Telefono</th>
+                                            <th>Acciones</th>
+
                                         </tr>
                                     </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Position</th>
-                                            <th>Office</th>
-                                            <th>Age</th>
-                                            <th>Start date</th>
-                                            <th>Salary</th>
-                                        </tr>
-                                    </tfoot>
+
                                     <tbody>
                                         <tr>
-                                            <td>Tiger Nixon</td>
-                                            <td>System Architect</td>
-                                            <td>Edinburgh</td>
-                                            <td>61</td>
-                                            <td>2011/04/25</td>
-                                            <td>$320,800</td>
+                                            <td>123</td>
+                                            <td>Manuel Machado</td>
+                                            <td>manuel.machado.j.m@gmail.com</td>
+                                            <td>3794862502</td>
+                                            <td><a href="#" class="btn btn-danger btn-circle">
+                                                <i class="fas fa-trash"></i>
+                                            </a></td>
+
                                         </tr>
                                     </tbody>
                                 </table>
@@ -474,7 +467,7 @@
     <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/datatables-demo.js"></script>
+    <script src="js/usuarios.js"></script>
 
 </body>
 
